Fixed accordion collapse/expand icon positioning

--- a/src/components/accordion/Accordion.module.scss
+++ b/src/components/accordion/Accordion.module.scss
@@ -108,11 +108,11 @@
     }
 
     .icon {
+        display: flex;
+        margin-top: 3px;
         user-select: none;
         cursor: pointer;
         margin-right: 1rem;
-        display: flex;
-        align-items: center;
         svg {
             fill: var(--primary) !important;
             // IE11
@@ -136,7 +136,7 @@
     }
     input:checked ~ .icon {
         &.minimise {
-            display: block;
+            display: flex;
         }
         &.expand {
             display: none;
